Add: Files, and tests

--- a/Webpage/homepage.html
+++ b/Webpage/homepage.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 
-    <img class="rouded-circle" src="#" alt="">
+    <!-- <img class="rouded-circle" src="teste_img.jpg" width="140" height="140"> -->
 
     <h1 style="text-align: center">Celso Simões</h1>
 
